redactable/tests/ui/sensitive_display_raw_required.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
enum LoginError {
    #[error("context {context}")]
    Invalid { context: String },
}

fn main() {}
